# AbyssApplicationTemplate

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
include/: AppUserInterface.h
scripts/: Build.bat  CreateClass.bat
src/: AppUserInterface.cpp
